Replace deprecated API calls flagged by CodeQL
- Class.newInstance() -> getDeclaredConstructor().newInstance()
- Jackson: set MapperFeature through JsonMapper.builder() instead of on a
  built ObjectMapper (JsonUtil and the Activiti resources)
- OSGi LogEntry.getLevel() -> getLogLevel(), mapping AUDIT and TRACE too
- OrientDB: db.save(doc) and the internal index manager API
- commons-io FileUtils.write with an explicit charset
- Log the client certificate subject via getSubjectX500Principal()
- Drop the no-op BoneCP setReleaseHelperThreads()

Resolves CodeQL alerts #54-#56, #58, #59, #65-#68, #73, #76-#83, #86-#92.